--- a/package.json
+++ b/package.json
@@ -4,24 +4,23 @@
   "main": "app.js",
   "license": "MIT",
   "scripts": {
-    "dist": "webpack --mode development",
-    "start": "webpack-dev-server --mode development --watch --progress --colors"
+    "dist": "webpack --mode production",
+    "start": "webpack serve --mode development --progress"
   },
-  "dependencies": {
-    "@babylonjs/core": "^4.0.3",
-    "@babylonjs/materials": "^4.0.3"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@types/html-webpack-plugin": "^3.2.0",
-    "@types/webpack": "^4.4.33",
-    "@types/webpack-dev-server": "^3.1.6",
-    "eslint": "^6.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "ts-loader": "^6.0.4",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.2",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "@babylonjs/core": "^4.2.0",
+    "@babylonjs/gui": "^4.2.0",
+    "@types/html-webpack-plugin": "^3.2.5",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^3.11.4",
+    "eslint": "^7.29.0",
+    "html-webpack-plugin": "^5.3.2",
+    "ts-loader": "^9.2.3",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.4",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
