--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/html-webpack-plugin": "^3.2.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^3.11.4",
+    "copy-webpack-plugin": "^9.0.1",
     "eslint": "^7.29.0",
     "html-webpack-plugin": "^5.3.2",
     "ts-loader": "^9.2.3",
